2008-08-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el (sldb-setup): Insert "No backtrace" if the backtrace is
	empty.

2008-08-27  Anton Vodonosov <avodonosov@yandex.ru>

	* swank-ecl.lisp: Add :load-toplevel and :execute to EVAL-WHENs to
	fix loading.

2008-08-27  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (remove-sigio-handlers): Fix thinko.

	* swank.lisp (decode-message): Don't ignore EOF.
	(swank-debugger-hook): Remove the default-debugger restart.

2008-08-25  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-compute-modeline-package): Used `when-let' before its definition.
	(slime-compute-modeline-string): Display "PKG:" before "CON:".

2008-08-22  Helmut Eller  <heller@common-lisp.net>

	Some focus handling in multiframe setups.

	* slime.el (slime-pop-to-buffer): New function.
	(slime-switch-to-output-buffer): Use it.

2008-08-22  Helmut Eller  <heller@common-lisp.net>

	Use lazy lists in the inspector.

	* swank.lisp (lcons): New data type.
	(lcons*, lcons-car, lcons-cdr, llist-range): New functions.
	(emacs-inspect array): Use lazy lists.
	(istate>elisp): The istate.content is now be a lazy list.
	(iline): New utility.
	(prepare-range, prepare-part): Replaces inspector-content.

2008-08-22  Helmut Eller  <heller@common-lisp.net>

	Implement streams with a length limit.
	Use them to truncate printer output in backtraces.

	* swank-backend.lisp (make-output-stream, make-input-stream):
	Split make-fn-streams up into two functions.

	* swank.lisp (call/truncated-output-to-string): New function.
	(backtrace, istate>elisp, to-line): Use it.
	(frame-locals-for-emacs): Use to-line.

2008-08-22  Helmut Eller  <heller@common-lisp.net>

	In backtraces, escape newlines in strings as \n.

	* swank.lisp (*backtrace-pprint-dispatch-table*): New.
	(*backtrace-printer-bindings*): Use it.

2008-08-22  Stas Boukarev <stassats@gmail.com>

	* metering.lisp: Add deftypes for time-type and cons-type, which