@@ -24,6 +24,12 @@
                                    :format-arguments format-arguments))))
     nil))
 
+(defimplementation make-output-stream (write-string)
+  (ext:make-slime-output-stream write-string))
+
+(defimplementation make-input-stream (read-string)
+  (ext:make-slime-input-stream read-string))
+
 (defimplementation make-fn-streams (input-fn output-fn)
   (let* ((output (ext:make-slime-output-stream output-fn))
          (input  (ext:make-slime-input-stream input-fn output)))
